--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Your Name - Personal Portfolio" />
-  <title>Your Name</title>
+  <title>Riju Marwah</title>
   <style>
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background-color: #f4f4f4;
       color: #222;
     }
     .container {
@@ -60,8 +59,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>Your Name</h1>
-      <p>Hi there, I'm Riju! A developer interested in web and systems programming.</p>
+      <h1>Riju Marwah</h1>
+      <p>I’m a Research Intern at the AI Institute of South Carolina. Previously, I’ve Interned at EY, IOCL & NTPC. My interest lies at the intersection of AI and real applications. </p>
       <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
