--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
     <header>
       <h1>Riju Marwah</h1>
       <p>I’m a Research Intern at the AI Institute of South Carolina. Previously, I’ve Interned at EY, IOCL & NTPC. My interest lies at the intersection of AI and real applications. </p>
+      <p>
+        <a href="mailto:marwah.riju@gmail.com">marwah.riju@gmail.com</a> ·
+        <a href="https://linkedin.com/in/riju-marwah">LinkedIn</a> ·
+        <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en">Google Scholar</a>
+      </p>
       <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
