--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       <img src="https://images.spr.so/cdn-cgi/imagedelivery/j42No7y-dcokJuNgXeA0ig/ddbb7af8-a173-411c-962c-60bb3c3f2620/1739349600049/w=256,quality=90,fit=scale-down" alt="Profile Photo" style="border-radius: 50%; width: 128px; height: 128px; object-fit: cover; margin-bottom: 20px;">
       <h1>Riju Marwah</h1>
       <p>I’m a Research Intern at the AI Institute of South Carolina. Previously, I’ve Interned at EY, IOCL & NTPC. My interest lies at the intersection of AI and real applications. </p>
-      <p>
-        <a href="mailto:marwah.riju@gmail.com">marwah.riju@gmail.com</a> ·
-        <a href="https://linkedin.com/in/riju-marwah">LinkedIn</a> ·
-        <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en">Google Scholar</a>
+      <p style="margin-top: 10px;">
+        <a href="mailto:marwah.riju@gmail.com" style="text-decoration: none; color: #007acc;">marwah.riju@gmail.com</a> ·
+        <a href="https://linkedin.com/in/riju-marwah" style="text-decoration: none; color: #007acc;">LinkedIn</a> ·
+        <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en" style="text-decoration: none; color: #007acc;">Google Scholar</a>
       </p>
       <nav>
         <a href="#about">About</a>
