--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </p>
       <nav>
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#publications">Blog</a>
+        <a href="#publications">Publications</a>
+        <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -82,18 +82,42 @@
       </p>
     </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
+    <section id="publications">
+      <h2>Publications</h2>
+      <ol>
         <li>
-          <strong>Generic Sensor Demo</strong> – An experiment using browser sensors in real-time.
-          <br />
-          <a href="https://github.com/riju/sensor-demo">View on GitHub</a>
+          <strong>MicroDetect-Net (MDN): Leveraging Deep Learning to Detect Microplastics in Clamp Blood, a Step Towards Human Blood Analysis</strong><br />
+          <em>8th International Conference on Innovative Computing and Communication, Innovative Computation in Biomedical Imaging</em>
+          <p>
+            With this paper, we present a new model, the MicroDetect-Net (MDN), which applies fluorescence microscopy with Nile Red-dye staining and deep learning to scan blood samples for microplastics.
+          </p>
         </li>
-      </ul>
+        <li>
+          <strong>Augmented Reality Assistive Technologies for Disabled Individuals</strong><br />
+          <em>Volume 9, Issue 5, September–October 2025, Indian Journal of Computer Science</em>
+          <p>
+            Through an in-depth analysis of four case studies, this paper aims to provide a comprehensive overview of the current state-of-the-art in AR assistive technologies for individuals with disabilities, highlighting their potential to assist and transform their lives.
+          </p>
+          <p>
+            [ <a href="https://www.indianjournalofcomputerscience.com/index.php/tcsj/article/view/174646" style="text-decoration: none; color: #007acc;">Indian Journal</a>,
+            <a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240902053M/abstract" style="text-decoration: none; color: #007acc;">NASA ADSABS</a>,
+            <a href="https://arxiv.org/abs/2409.02053" style="text-decoration: none; color: #007acc;">Arxiv</a> ]
+          </p>
+        </li>
+        <li>
+          <strong>Humanizing AI-Generated Text: Techniques and Future Directions</strong><br />
+          <em>Volume 7, Issue 11, November 2024, International Journal of Research in Engineering, Science and Management</em>
+          <p>
+            This paper explores the techniques used by these humanizers to achieve content that seems human-written, often rendering AI detectors ineffective. Methods such as lexical substitution, sentence restructuring, sentiment adjustment, etc. This paper aims to give a deep understanding of how AI humanizers function.
+          </p>
+          <p>
+            [ <a href="https://www.ijresm.com/issue/volume-7-issue-11-november-2024/article/view-20/" style="text-decoration: none; color: #007acc;">IJRESM Volume 7, Issue 11, November 2024</a> ]
+          </p>
+        </li>
+      </ol>
     </section>
 
-    <section id="publications">
+    <section id="blog">
       <h2>Blog</h2>
       <p>No blog posts yet.</p>
     </section>
