--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <h1>Riju Marwah</h1>
       <p>I’m a Research Intern at the AI Institute of South Carolina. Previously, I’ve Interned at EY, IOCL & NTPC. My interest lies at the intersection of AI and real applications. </p>
       <p style="margin-top: 10px;">
+        <a href="./" style="text-decoration: none; color: #007acc;">Resume</a> ·
         <a href="mailto:marwah.riju@gmail.com" style="text-decoration: none; color: #007acc;">marwah.riju@gmail.com</a> ·
         <a href="https://linkedin.com/in/riju-marwah" style="text-decoration: none; color: #007acc;">LinkedIn</a> ·
         <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en" style="text-decoration: none; color: #007acc;">Google Scholar</a>
@@ -99,7 +100,7 @@
             Through an in-depth analysis of four case studies, this paper aims to provide a comprehensive overview of the current state-of-the-art in AR assistive technologies for individuals with disabilities, highlighting their potential to assist and transform their lives.
           </p>
           <p>
-            [ <a href="https://www.indianjournalofcomputerscience.com/index.php/tcsj/article/view/174646" style="text-decoration: none; color: #007acc;">Indian Journal</a>,
+            [ <a href="https://www.indianjournalofcomputerscience.com/index.php/tcsj/article/view/174646" style="text-decoration: none; color: #007acc;">IJCS</a>,
             <a href="https://ui.adsabs.harvard.edu/abs/2024arXiv240902053M/abstract" style="text-decoration: none; color: #007acc;">NASA ADSABS</a>,
             <a href="https://arxiv.org/abs/2409.02053" style="text-decoration: none; color: #007acc;">Arxiv</a> ]
           </p>
@@ -111,7 +112,7 @@
             This paper explores the techniques used by these humanizers to achieve content that seems human-written, often rendering AI detectors ineffective. Methods such as lexical substitution, sentence restructuring, sentiment adjustment, etc. This paper aims to give a deep understanding of how AI humanizers function.
           </p>
           <p>
-            [ <a href="https://www.ijresm.com/issue/volume-7-issue-11-november-2024/article/view-20/" style="text-decoration: none; color: #007acc;">IJRESM Volume 7, Issue 11, November 2024</a> ]
+            [ <a href="https://www.ijresm.com/issue/volume-7-issue-11-november-2024/article/view-20/" style="text-decoration: none; color: #007acc;">IJRESM</a> ]
           </p>
         </li>
       </ol>
