--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <nav>
         <a href="#about">About</a>
         <a href="#publications">Publications</a>
-        <a href="#blog">Blog</a>
+        <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -118,9 +118,41 @@
       </ol>
     </section>
 
-    <section id="blog">
-      <h2>Blog</h2>
-      <p>No blog posts yet.</p>
+    <section id="experience">
+      <h2>Experience</h2>
+      <ol>
+      <li>
+        <strong>Research Intern, AI Institute at the University of South Carolina</strong>
+        <ul>
+          <li>Explored and conceptualized novel frameworks addressing <em>AI fatigue</em> and interventions for prevention</li>
+          <li>Researched schema generation techniques for structured input automation</li>
+        </ul>
+      </li>
+      <li>
+        <strong>AgenticAI Intern, EY (Ernst & Young)</strong>
+        <ul>
+          <li>Built a low-code platform to design and execute AgenticAI workflows using a modular DAG engine with LLMs, vector DBs, and logic components</li>
+          <li>Engineered scalable task execution with Celery, Redis, and real-time debugging</li>
+          <li>Integrated semantic agent routing, memory, and API/tool support (OpenAI, FAISS)</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Summer Intern, National Thermal Power Corporation</strong>
+        <ul>
+          <li>Developed scalable ASP.NET Core applications using MVC and Entity Framework</li>
+          <li>Managed MySQL and MongoDB with LINQ, optimizing CRUD operations and ensuring ACID compliance</li>
+          <li>Implemented secure authentication with Identity Framework, JWT, Gmail SMTP, and Google reCAPTCHA</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Strategy & Information Systems Intern, Indian Oil Corporation Limited</strong>
+        <ul>
+          <li>Contributed to IOCL’s Digital Tender Management Project with QA methodologies (black-box, UI/UX, and performance testing)</li>
+          <li>Created test cases, boosting application performance, stability, and user experience</li>
+          <li>Conducted root cause analysis, streamlining processes and enhancing system reliability</li>
+        </ul>
+      </li>
+    </ol>
     </section>
 
     <section id="contact">
