--- a/index.html
+++ b/index.html
@@ -119,37 +119,37 @@
     </section>
 
     <section id="experience">
-      <h2>Experience</h2>
-      <ol>
-      <li>
+    <h2>Experience</h2>
+    <ol style="margin-left: 20px; line-height: 1.6;">
+      <li style="margin-bottom: 6px;">
         <strong>Research Intern, AI Institute at the University of South Carolina</strong>
-        <ul>
-          <li>Explored and conceptualized novel frameworks addressing <em>AI fatigue</em> and interventions for prevention</li>
-          <li>Researched schema generation techniques for structured input automation</li>
+        <ul style="margin-top: 10px; margin-bottom: 20px;">
+          <li style="margin-bottom: 6px;">Explored and conceptualized novel frameworks addressing <em>AI fatigue</em> and interventions for prevention</li>
+          <li style="margin-bottom: 6px;">Researched schema generation techniques for structured input automation</li>
         </ul>
       </li>
-      <li>
+      <li style="margin-bottom: 6px;">
         <strong>AgenticAI Intern, EY (Ernst & Young)</strong>
-        <ul>
-          <li>Built a low-code platform to design and execute AgenticAI workflows using a modular DAG engine with LLMs, vector DBs, and logic components</li>
-          <li>Engineered scalable task execution with Celery, Redis, and real-time debugging</li>
-          <li>Integrated semantic agent routing, memory, and API/tool support (OpenAI, FAISS)</li>
+        <ul style="margin-top: 10px; margin-bottom: 20px;">
+          <li style="margin-bottom: 6px;">Built a low-code platform to design and execute AgenticAI workflows using a modular DAG engine with LLMs, vector DBs, and logic components</li>
+          <li style="margin-bottom: 6px;">Engineered scalable task execution with Celery, Redis, and real-time debugging</li>
+          <li style="margin-bottom: 6px;">Integrated semantic agent routing, memory, and API/tool support (OpenAI, FAISS)</li>
         </ul>
       </li>
-      <li>
+      <li style="margin-bottom: 6px;">
         <strong>Summer Intern, National Thermal Power Corporation</strong>
-        <ul>
-          <li>Developed scalable ASP.NET Core applications using MVC and Entity Framework</li>
-          <li>Managed MySQL and MongoDB with LINQ, optimizing CRUD operations and ensuring ACID compliance</li>
-          <li>Implemented secure authentication with Identity Framework, JWT, Gmail SMTP, and Google reCAPTCHA</li>
+        <ul style="margin-top: 10px; margin-bottom: 20px;">
+          <li style="margin-bottom: 6px;">Developed scalable ASP.NET Core applications using MVC and Entity Framework</li>
+          <li style="margin-bottom: 6px;">Managed MySQL and MongoDB with LINQ, optimizing CRUD operations and ensuring ACID compliance</li>
+          <li style="margin-bottom: 6px;">Implemented secure authentication with Identity Framework, JWT, Gmail SMTP, and Google reCAPTCHA</li>
         </ul>
       </li>
-      <li>
+      <li style="margin-bottom: 6px;">
         <strong>Strategy & Information Systems Intern, Indian Oil Corporation Limited</strong>
-        <ul>
-          <li>Contributed to IOCL’s Digital Tender Management Project with QA methodologies (black-box, UI/UX, and performance testing)</li>
-          <li>Created test cases, boosting application performance, stability, and user experience</li>
-          <li>Conducted root cause analysis, streamlining processes and enhancing system reliability</li>
+        <ul style="margin-top: 10px; margin-bottom: 20px;">
+          <li style="margin-bottom: 6px;">Contributed to IOCL’s Digital Tender Management Project with QA methodologies (black-box, UI/UX, and performance testing)</li>
+          <li style="margin-bottom: 6px;">Created test cases, boosting application performance, stability, and user experience</li>
+          <li style="margin-bottom: 6px;">Conducted root cause analysis, streamlining processes and enhancing system reliability</li>
         </ul>
       </li>
     </ol>
