--- a/index.html
+++ b/index.html
@@ -69,18 +69,23 @@
         <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en" style="text-decoration: none; color: #007acc;">Google Scholar</a>
       </p>
       <nav>
-        <a href="#about">About</a>
+        <a href="#edu">Education</a>
         <a href="#publications">Publications</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
 
-    <section id="about">
-      <h2>About</h2>
-      <p>
-        I'm exploring various web APIs and open-source technologies. Recently tried out the Generic Sensor API on Chrome.
-      </p>
+    <section id="edu">
+    <h2>Education</h2>
+    <p><strong>Computer Science Engineering</strong><br />
+    Guru Gobind Singh Indraprastha University</p>
+    <h3>Relevant Courses:</h3>
+    <p>
+      C Language, Data Structures, Digital Logic and Computer Design, OOPs in C++, Database Management System, Probability Statistics and Linear Programming,<br />
+      Programming in Java, Advanced Java, Theory of Computation, Compiler Design, Software Engineering, Design and Analysis of Algorithms (DAA),<br />
+      Computer Networks, Operating Systems.
+    </p>
     </section>
 
     <section id="publications">
