--- a/index.html
+++ b/index.html
@@ -76,18 +76,6 @@
       </nav>
     </header>
 
-    <section id="edu">
-    <h2>Education</h2>
-    <p><strong>Computer Science Engineering</strong><br />
-    Guru Gobind Singh Indraprastha University</p>
-    <h3>Relevant Courses:</h3>
-    <p>
-      C Language, Data Structures, Digital Logic and Computer Design, OOPs in C++, Database Management System, Probability Statistics and Linear Programming,<br />
-      Programming in Java, Advanced Java, Theory of Computation, Compiler Design, Software Engineering, Design and Analysis of Algorithms (DAA),<br />
-      Computer Networks, Operating Systems.
-    </p>
-    </section>
-
     <section id="publications">
       <h2>Publications</h2>
       <ol>
@@ -159,6 +147,29 @@
       </li>
     </ol>
     </section>
+
+    <section id="edu" style="margin-bottom: 40px;">
+    <h2>Education</h2>
+    <p style="margin-bottom: 5px;"><strong>Computer Science Engineering</strong></p>
+    <p style="margin-top: 0; margin-bottom: 20px;">Guru Gobind Singh Indraprastha University</p>
+    <p><strong style="font-weight: 600;">Relevant Courses</strong></p>
+    <ul style="columns: 2; -webkit-columns: 2; -moz-columns: 2; margin-top: 10px;">
+      <li>C Language</li>
+      <li>Data Structures</li>
+      <li>Digital Logic and Computer Design</li>
+      <li>OOPs in C++</li>
+      <li>Database Management System</li>
+      <li>Probability Statistics and Linear Programming</li>
+      <li>Programming in Java</li>
+      <li>Advanced Java</li>
+      <li>Theory of Computation</li>
+      <li>Compiler Design</li>
+      <li>Software Engineering</li>
+      <li>Design and Analysis of Algorithms (DAA)</li>
+      <li>Computer Networks</li>
+      <li>Operating Systems</li>
+    </ul>
+  </section>
 
     <section id="contact">
       <h2>Contact</h2>
