--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <a href="#edu">Education</a>
         <a href="#publications">Publications</a>
         <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -147,6 +148,30 @@
       </li>
     </ol>
     </section>
+
+    <section id="projects" style="margin-bottom: 40px;">
+    <h2>Projects</h2>
+    <ol style="margin-left: 20px; line-height: 1.6;">
+      <li>
+        <strong>Dynamically Optimized Cycling Navigation with Real-Time Adaptive Routing</strong>
+        <p>
+          This study develops a real-time cycling route optimization model addressing poor infrastructure, disconnected routes, and traffic. Using Monte Carlo rollouts, OpenStreetMap (OSM), OSMnx, and NetworkX, the model dynamically adjusts road weights based on safety, traffic, and real-time obstacles (1% random blockage). It integrates Dijkstra’s/A for fallback routing and Strongly Connected Components (SCC) to ensure connectivity. The model continuously optimizes safer, cycle-friendly routes, validated through Python-based visualization.
+        </p>
+      </li>
+      <li>
+        <strong>Early Stage Lung Cancer Detection Using Deep Convolutional Neural Networks: A Comprehensive AI-Driven Approach for Precision Pulmonary Nodule Classification and Enhanced CT Imaging</strong>
+        <p>
+          Developed a CNN model using the LIDC-IDRI dataset to detect lung nodules in CT scans, improving early diagnosis of lung cancer. Leveraged Google Cloud for scalable data storage and Google Colab for GPU-accelerated model training. Integrated explainability tools to assist radiologists in making informed diagnoses. Focused on creating a scalable, real-time AI solution for clinical deployment.
+        </p>
+      </li>
+      <li>
+        <strong>Microphone Array-Based Direction of Arrival for Gunshot Detection</strong> <em>(Nominee for Smart India Hackathon 2024)</em>
+        <p>
+          Developed a real-time gunshot detection system using a 6-microphone array to capture sound and determine the direction of arrival (DoA) using Time Difference of Arrival (TDoA) algorithms. Leveraged FPGA-based processing, bandpass filtering, and sound classification algorithms (KNN, STFT) for noise reduction and accurate detection. The system provides visual feedback and enhances situational awareness for military and security applications, reducing false positives and enabling rapid response.
+        </p>
+      </li>
+    </ol>
+  </section>
 
     <section id="edu" style="margin-bottom: 40px;">
     <h2>Education</h2>
