--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <a href="#publications">Publications</a>
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
       </nav>
     </header>
 
@@ -172,6 +171,30 @@
       </li>
     </ol>
   </section>
+
+  <section id="volunteering" style="margin-bottom: 40px;">
+  <h2>Leadership & Volunteering</h2>
+  <ol style="margin-left: 20px; line-height: 1.6;">
+    <li>Delegate, <strong>Harvard Project for Asian and International Relations</strong></li>
+    <li>Volunteer, <strong>Rotaract Club of New Delhi</strong></li>
+    <li>Founding Member & Event Head, <strong>Quarantech</strong></li>
+  </ol>
+</section>
+
+<section id="skills" style="margin-bottom: 40px;">
+  <h2>Skill Set</h2>
+  <ul style="list-style-type: none; padding-left: 0; line-height: 1.8;">
+    <li><strong>Languages:</strong> Python, C++</li>
+    <li><strong>API Development:</strong> FastAPI, Flask, RESTful APIs, JWT Authentication</li>
+    <li><strong>Orchestration & Queues:</strong> Apache Airflow, Celery, DAG Execution, Task Scheduling, RabbitMQ</li>
+    <li><strong>Microservices:</strong> REST, gRPC, WebSockets, Service-to-Service Communication</li>
+    <li><strong>Databases:</strong> MySQL, PostgreSQL (Schema, Optimization, Indexing), MongoDB, Redis (Caching)</li>
+    <li><strong>Vector Search & Embeddings:</strong> FAISS, OpenAI Embeddings</li>
+    <li><strong>Machine Learning:</strong> TensorFlow, PyTorch, Hugging Face, TorchServe, TF Serving</li>
+    <li><strong>Data Processing:</strong> NumPy, Pandas, MATLAB</li>
+    <li><strong>Tools:</strong> LaTeX, Git, VS Code, PyCharm, Photoshop, Premiere Pro</li>
+  </ul>
+</section>
 
     <section id="edu" style="margin-bottom: 40px;">
     <h2>Education</h2>
