--- a/index.html
+++ b/index.html
@@ -227,5 +227,19 @@
       </p>
     </section>
   </div>
+<footer style="text-align: center; margin-top: 60px; font-size: 0.9rem; color: #666;">
+  &mdash; New Delhi · <span id="ist-time"></span>
+  <script>
+    function updateTimeIST() {
+      const now = new Date();
+      const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
+      const ist = new Date(utc + (3600000 * 5.5));
+      const options = { hour: '2-digit', minute: '2-digit', second: '2-digit' };
+      document.getElementById("ist-time").textContent = ist.toLocaleTimeString("en-IN", options);
+    }
+    updateTimeIST();
+    setInterval(updateTimeIST, 1000);
+  </script>
+</footer>
 </body>
 </html>
