--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
   <section id="volunteering" style="margin-bottom: 40px;">
   <h2>Leadership & Volunteering</h2>
   <ol style="margin-left: 20px; line-height: 1.6;">
-    <li>Delegate, <strong>Harvard Project for Asian and International Relations</strong></li>
-    <li>Volunteer, <strong>Rotaract Club of New Delhi</strong></li>
-    <li>Founding Member & Event Head, <strong>Quarantech</strong></li>
+    <li>Delegate, Harvard Project for Asian and International Relations</li>
+    <li>Volunteer, Rotaract Club of New Delhi</li>
+    <li>Founding Member & Event Head, Quarantech</li>
   </ol>
 </section>
 
