--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
       <img src="https://images.spr.so/cdn-cgi/imagedelivery/j42No7y-dcokJuNgXeA0ig/ddbb7af8-a173-411c-962c-60bb3c3f2620/1739349600049/w=256,quality=90,fit=scale-down" alt="Profile Photo" style="width: 128px; height: 128px; object-fit: cover; margin-bottom: 20px;">
       <h1>Riju Marwah</h1>
       <p>I’m a Research Intern at the AI Institute of South Carolina. Previously, I’ve Interned at EY, IOCL & NTPC. My interest lies at the intersection of AI and real applications. </p>
+      <p style="margin-top: -10px; font-size: 0.9rem; color: #555;">&mdash; New Delhi · <span id="ist-time"></span></p>
+      <script>
+        function updateTimeIST() {
+          const now = new Date();
+          const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
+          const ist = new Date(utc + (3600000 * 5.5));
+          const options = { hour: '2-digit', minute: '2-digit', second: '2-digit' };
+          document.getElementById("ist-time").textContent = ist.toLocaleTimeString("en-IN", options);
+        }
+        updateTimeIST();
+        setInterval(updateTimeIST, 1000);
+      </script>
       <p style="margin-top: 10px;">
         <a href="https://drive.google.com/file/d/1RAyO-07Opdy3dng16pxqy1ThW8Exzilk/view?usp=sharing" style="text-decoration: none; color: #007acc;">Resume</a> ·
         <a href="mailto:marwah.riju@gmail.com" style="text-decoration: none; color: #007acc;">marwah.riju@gmail.com</a> ·
