--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 <section id="skills" style="margin-bottom: 40px;">
   <h2>Skill Set</h2>
-  <ul style="list-style-type: none; padding-left: 0; line-height: 1.8;">
+  <ul style="margin-left: 20px; line-height: 1.6;">
     <li><strong>Languages:</strong> Python, C++</li>
     <li><strong>API Development:</strong> FastAPI, Flask, RESTful APIs, JWT Authentication</li>
     <li><strong>Orchestration & Queues:</strong> Apache Airflow, Celery, DAG Execution, Task Scheduling, RabbitMQ</li>
