--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h2>Publications</h2>
       <ol>
         <li>
-          <strong>MicroDetect-Net (MDN): Leveraging Deep Learning to Detect Microplastics in Clamp Blood, a Step Towards Human Blood Analysis</strong><br />
+          <strong>MicroDetect-Net (MDN): Leveraging Deep Learning to Detect Microplastics in Clam Blood, a Step Towards Human Blood Analysis</strong><br />
           <em>8th International Conference on Innovative Computing and Communication, Innovative Computation in Biomedical Imaging</em>
           <p>
             With this paper, we present a new model, the MicroDetect-Net (MDN), which applies fluorescence microscopy with Nile Red-dye staining and deep learning to scan blood samples for microplastics.
