--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <a href="#publications">Publications</a>
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
+        <a href="#news">News</a>
       </nav>
     </header>
 
@@ -184,8 +185,8 @@
     </ol>
   </section>
 
-  <section id="volunteering" style="margin-bottom: 40px;">
-  <h2>Leadership & Volunteering</h2>
+  <section id="news" style="margin-bottom: 40px;">
+  <h2>News Articles</h2>
   <ol style="margin-left: 20px; line-height: 1.6;">
     <li><a href="https://www.linkedin.com/in/riju-marwah/details/featured/1612172717977/single-media-viewer/?profileId=ACoAADGwSkQBJNquIuqx5bzolz_lZRiLgI-dFsg">Times of India, Quarantech</a></li>
     <li><a href="https://www.hindustantimes.com/delhi/tagore-international-showcases-skills-at-computer-fest/story-ROYw6SYRw3dVGM9G09nEtK.html">Hindustan Times, Ordin@Trix 19.0</a></li>
