--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
   <section id="news" style="margin-bottom: 40px;">
   <h2>News Articles</h2>
   <ol style="margin-left: 20px; line-height: 1.6;">
-    <li><a href="https://www.linkedin.com/in/riju-marwah/details/featured/1612172717977/single-media-viewer/?profileId=ACoAADGwSkQBJNquIuqx5bzolz_lZRiLgI-dFsg">Times of India, Quarantech</a></li>
-    <li><a href="https://www.hindustantimes.com/delhi/tagore-international-showcases-skills-at-computer-fest/story-ROYw6SYRw3dVGM9G09nEtK.html">Hindustan Times, Ordin@Trix 19.0</a></li>
-    <li><a href="https://dwarkaparichay.com/blog/sri-vis-sector-18-dwarka-new-delhi-quarantech-learning-exploring/">Dwarka Parichay, Quarantech</a></li>
-    <li><a href="https://www.linkedin.com/in/riju-marwah/details/featured/1612172696910/single-media-viewer/?profileId=ACoAADGwSkQBJNquIuqx5bzolz_lZRiLgI-dFsg">Brainfeed Magazine, Quarantech</a></li>
+    <li><a href="https://www.linkedin.com/in/riju-marwah/details/featured/1612172717977/single-media-viewer/?profileId=ACoAADGwSkQBJNquIuqx5bzolz_lZRiLgI-dFsg" style="text-decoration: none; color: #007acc;">Times of India, Quarantech</a></li>
+    <li><a href="https://www.hindustantimes.com/delhi/tagore-international-showcases-skills-at-computer-fest/story-ROYw6SYRw3dVGM9G09nEtK.html" style="text-decoration: none; color: #007acc;">Hindustan Times, Ordin@Trix 19.0</a></li>
+    <li><a href="https://dwarkaparichay.com/blog/sri-vis-sector-18-dwarka-new-delhi-quarantech-learning-exploring/" style="text-decoration: none; color: #007acc;">Dwarka Parichay, Quarantech</a></li>
+    <li><a href="https://www.linkedin.com/in/riju-marwah/details/featured/1612172696910/single-media-viewer/?profileId=ACoAADGwSkQBJNquIuqx5bzolz_lZRiLgI-dFsg" style="text-decoration: none; color: #007acc;">Brainfeed Magazine, Quarantech</a></li>
   </ol>
 </section>
 
