--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <a href="mailto:marwah.riju@gmail.com" style="text-decoration: none; color: #007acc;">marwah.riju@gmail.com</a> ·
         <a href="https://linkedin.com/in/riju-marwah" style="text-decoration: none; color: #007acc;">LinkedIn</a> ·
         <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en" style="text-decoration: none; color: #007acc;">Google Scholar</a>
+        <a href="https://github.com/rijumarwah" style="text-decoration: none; color: #007acc;>Github</a>
       </p>
       <nav>
         <a href="#edu">Education</a>
@@ -86,6 +87,7 @@
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
         <a href="#news">News</a>
+        <a href="#skills">Skills</a>
       </nav>
     </header>
 
