--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <a href="https://drive.google.com/file/d/1RAyO-07Opdy3dng16pxqy1ThW8Exzilk/view?usp=sharing" style="text-decoration: none; color: #007acc;">Resume</a> ·
         <a href="mailto:marwah.riju@gmail.com" style="text-decoration: none; color: #007acc;">marwah.riju@gmail.com</a> ·
         <a href="https://linkedin.com/in/riju-marwah" style="text-decoration: none; color: #007acc;">LinkedIn</a> ·
-        <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en" style="text-decoration: none; color: #007acc;">Google Scholar</a>
-        
+        <a href="https://scholar.google.com/citations?user=Oahgb0wAAAAJ&hl=en" style="text-decoration: none; color: #007acc;">Scholar</a> ·
+        <a href="https://github.com/rijumarwah" style="text-decoration: none; color: #007acc;">Github</a>
       </p>
       <nav>
         <a href="#edu">Education</a>
